Ruby Posts - Cypress on Rails

--- a/ruby-posts/Gemfile
+++ b/ruby-posts/Gemfile
@@ -17,6 +17,10 @@ group :development, :test do
   gem "debug", platforms: %i[ mri windows ], require: "debug/prelude"
   gem "brakeman", require: false
   gem "rubocop-rails-omakase", require: false
+  gem "cypress-on-rails"
+  gem "database_cleaner"
+  gem "factory_bot_rails"
+  gem "faker"
 end
 
 group :development do
